--- a/ui.frontend/src/main/webpack/core-components/text/scss/styles/_default.scss
+++ b/ui.frontend/src/main/webpack/core-components/text/scss/styles/_default.scss
@@ -75,5 +75,7 @@
         max-width: rem(704);
         max-height: rem(439);
         background-size: cover;
+        width: 100%;
+        height: auto;
     }
 }
